<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/watched_fragment_nav"
        android:icon="@drawable/ic_watched_24"
        app:showAsAction="ifRoom"
        android:title="@string/watched"
        android:orderInCategory="1"/>
    <item android:id="@+id/wanted_fragment_nav"
        android:icon="@drawable/ic_wanted_24"
        app:showAsAction="ifRoom"
        android:title="@string/wanted"
        android:orderInCategory="2"/>
    <item android:id="@+id/main_fragment_nav"
        android:icon="@drawable/ic_home_24"
        app:showAsAction="ifRoom"
        android:title="@string/main"
        android:orderInCategory="3"/>
    <item android:id="@+id/not_watched_fragment_nav"
        android:icon="@drawable/ic_not_watched_24"
        app:showAsAction="ifRoom"
        android:title="@string/not_watched"
        android:orderInCategory="4"/>
    <item android:id="@+id/unwanted_fragment_nav"
        android:icon="@drawable/ic_unwanted_24"
        app:showAsAction="ifRoom"
        android:title="@string/unwanted"
        android:orderInCategory="5"/>
</menu>