<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10dp"
    android:layout_marginEnd="@dimen/_10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/filter"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/genres"
            android:textSize="@dimen/_15sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/genre_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:entries="@array/genre_array"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/years"
            android:textSize="@dimen/_15sp"
            android:textStyle="italic" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/years_range_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:stepSize="1.0"
            android:valueFrom="1962.0"
            android:valueTo="2022.0"
            app:labelBehavior="withinBounds"
            app:labelStyle="@style/rangerStyle"
            app:values="@array/years_slider_values" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/sort_by"
            android:textSize="@dimen/_15sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/sort_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:entries="@array/sort_array"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_button"
            style="@style/profileButtonStyle"
            android:text="@string/clear_filter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/ok_button"
                style="@style/profileButtonStyle"
                android:text="@string/OK" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>