<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/details_bar"
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_height="@dimen/_50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/details_fragment_menu">

            <ImageView
                android:id="@+id/details_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/anibackground"
                android:alpha="0.4" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:menu="@menu/details_fragment_menu" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50dp"
            app:layoutDescription="@xml/details_zoom">

            <TextView
                android:id="@+id/original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/anime_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Dragon’s Dogma" />

            <ImageView
                android:id="@+id/anime_image"
                android:layout_width="@dimen/_0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/anig"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintEnd_toStartOf="@id/release_Data"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/original_title"
                app:layout_constraintVertical_weight="1" />

            <TextView
                android:id="@+id/release_Data"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/release_Author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toTopOf="@id/anime_image"
                tools:text="data" />

            <TextView
                android:id="@+id/release_Author"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/release_Genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@id/release_Data"
                tools:text="author" />

            <TextView
                android:id="@+id/release_Genre"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/release_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@id/release_Author"
                tools:text="genre" />


            <TextView
                android:id="@+id/release_rating"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/release_age_rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@id/release_Genre"
                tools:text="rating" />

            <TextView
                android:id="@+id/release_age_rate"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/anime_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@id/release_rating"
                tools:text="age rate" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="release_rating,anime_image" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/_720dp" />

            <ImageView
                android:id="@+id/details_description_image"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_0dp"
                android:layout_marginTop="@dimen/_10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/anibackground"
                android:alpha="0.1"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/english_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/russian_title"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                tools:text="English title" />

            <TextView
                android:id="@+id/russian_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/descriptionLabel"
                app:layout_constraintTop_toBottomOf="@id/english_title"
                tools:text="Russian title" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15_dp"
                android:text="@string/description"
                app:layout_constraintBottom_toTopOf="@id/description_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/russian_title" />


            <TextView
                android:id="@+id/description_value"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                android:layout_margin="@dimen/_10dp"
                android:paddingBottom="@dimen/_10dp"
                android:text="@string/default_description"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>